# cortex.llamacpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.bat  configure.sh
.github/runners/: actions-runner-ubuntu-2004-arm64.dockerfile  actions-runner-ubuntu-cuda-11-7.dockerfile  actions-runner-ubuntu-cuda-12-0-ubuntu-2204.dockerfile  actions-runner-ubuntu-cuda-12-0.dockerfile  actions-runner-ubuntu-cuda-12-4-ubuntu-2204.dockerfile  actions-runner-ubuntu-oneapi-2024-1.dockerfile  actions-runner-windows-cuda-11-7.dockerfile  actions-runner-windows-cuda-12-0.dockerfile  actions-runner-windows-cuda-12-4.dockerfile  runner-trt-llm.ps1  start.sh
.github/scripts/: e2e-test-server-linux-and-mac.sh  e2e-test-server-weekend.py  e2e-test-server-windows.bat  e2e-test-server.py
.github/workflows/: build.yml  convert-model-all-quant.yml  convert-model.yml  create-pr-sync-remote.yml  model_converter.yml  nightly-build.yml  nightly.yml  pr-remote.yml  quality-gate-submodule.yml  quality-gate.yml  template-e2e-weekend-test.yml  template-quality-gate-pr.yml  template-quality-gate-submodule.yml  update-model-yml.yml
base/cortex-common/: EngineI.h  enginei.h  task_result.h
examples/cli/: CMakeLists.txt  cli.cc  vcpkg-configuration.json  vcpkg.json
examples/server/: CMakeLists.txt  README.md  server.cc
patches/: 0001-Add-API-query-buffer-size.patch  0002-Build-llama-cpp-examples.patch
scripts/: benchmark.py  function_calling_custom_tool.py  update_model_yaml.py  update_model_yml.py
src/: LlamaEngine.cc  LlamaEngine.h  chat_completion_request.h  llama_client_slot.cc  llama_client_slot.h  llama_data.h  llama_engine.cc  llama_engine.h  llama_server_context.cc  llama_server_context.h  llama_utils.h
src/cpuid/: cpu_info.cc  cpu_info.h  cpu_validation.cc  cpu_validation.h  vulka_cube_data.h  vulkan_util.cc  vulkan_util.h  vulkan_util_init.cc  vulkan_util_init.h
src/cpuid/detail/: cpu_info_impl.h  extract_x86_flags.h  init_gcc_x86.h  init_ios_clang_arm.h  init_linux_gcc_arm.h  init_msvc_arm.h  init_msvc_x86.h  init_unknown.h
